--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
             "es2017"
         ],
         "typeRoots": [
-            "./src/typings"
+            "src/typings",
+            "node_modules/@types"
         ],
         "declaration": true,
         "rootDir": "src",
